# webChat

./: .gitignore  .info.jsonc  .info.pkl  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  data.db  deno.json  deno.jsonc  go.mod  jsconfig.json  main.go  package-lock.json  package.json  run.sh  server.ts  start.sh  test.ts  tsconfig.json  webpack.config.js
.cargo/: config.toml
.devcontainer/: Dockerfile  Dockerimage  README  devcontainer.json  set_up.sh
.devcontainer/cmd/: .bash  build.sh  run.sh  setup.sh
.github/ISSUE_TEMPLATE/: improvements.md
.github/workflows/: auto-assign.yml  deno.yml
.tmp/static/: awesome.json  favorites.html
.tmp/templates/err/: 403.html  406.html  418.html
Docker/: Dockerfile
README/: todo.md  versions.md
custom/: CHTML.ts
database/: chat.json  data.db
other/: README.mdx  old_server_1.ts
public/: help.html  index.ejs  index.html  main.js  manifest.webmanifest
public/css/: font.css  style.css
public/js/: interactive.js  island.js  main.js
public/pages/: call.html  help.html
public/pwa/: manifest.webmanifest
public/script/: interactive.js  jsconfig.json  main.js  manifest.webmanifest
public/scripts/: webchat.js
public/static/: awesome.json
public/style/: font.css  style.css  style.scss
public/webmanifest/: manifest.webmanifest
routes/: acess.jsonc  data.ts  errorHandler.ts
settings/: oauth.json
src/: .info.pkl  app.rs  fn.js  lib.rs  login.rs  main.rs  renderer.rs
src/backend/: .gitignore  go.mod  go.sum  main.go  server.go
src/backend/auth/: main.go
src/backend/auth/token/: token.go
src/backend/chat/: chat.go
src/backend/cmd/: cmd.go
src/backend/conf/: conf.go
src/backend/config/: config.go
src/backend/database/: database.go
src/backend/db/: main.go
src/backend/server/: old_server.go.txt  server.go  server.json
src/backend/token/: token.go
src/frontend/: index.html  index.tsx
src/frontend/components/: App.tsx  input.tsx  messages.tsx
src/frontend/scripts/: main.js
src/frontend/static/: awesome.json
src/frontend/styles/: tailwind.css
src/frontend/types/: wasm.d.ts
src/gui/: wayland.rs
src/public/: index.html
src/public/config/: chats.json
src/public/scripts/: island.js  main.js  names.json  offline.js  unused.js
src/public/static/: manifest.webmanifest  plugins.html
src/public/styles/: style.css
src/templates/err/: 404.html  500.html  501.html  503.html  508.html
src/templates/interface/: login.html
src/tmp/scripts/: messages.tsx
src/tmp/styles/: font.css
temp/: old_server.ts
templates/err/: 1005.html  401.html  403.html  418.html  501.html  503.html  508.html
templates/interface/: collected_data.html  me.html
test/: demo.ts  server.ts  youtube.ts
tmp/: data.db
view/: 403.ejs  404.htm  500.ejs  login.ejs  signUp.ejs
view/err/: 403.html  500.html  777.html
view/error/: 1010.html  403.html  404.html
view/interface/: login.html
webchat/: package.json
webchat/pages/: index.tsx
(+26 files in other folders)
